tests/paczka1/fuzzy1/53171779.err
Error in line 6: 0YyG5K26Z79 A400 45,2
Error in line 13: FSeYoJH A599 84,8
Error in line 15: FSeYoJH S763 83,9
Error in line 7: 0YyG5K26Z79 A599 77,4
Error in line 22: A599 A599 91,4
Error in line 20: 0YyG5K26Z79 A400 84,6
Error in line 30: 0YyG5K26Z79 A599 1,9
Error in line 29: A599 S298 98,2
